# roam

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
parks/: acad.md  glac.md  grca.md  grte.md  jotr.md  olym.md  romo.md  yell.md  yose.md  zion.md
src/roam/: config.py
src/roam/app/: main.py
src/roam/db/: chunker.py  embedder.py  fetcher.py  md_loader.py  runner.py  schema.py
src/roam/ingestion/: chunker.py  fetcher.py  runner.py  schema.py
src/roam/rag/: chain.py  retriever.py  router.py
src/roam/weather/: client.py
static/: style.css
